--- a/templates/addTask.html
+++ b/templates/addTask.html
@@ -6,38 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add tasks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'index' %}">Task Manager</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
-                    </li>
-                    {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout_user' %}">Logout</a>
-                    </li>
-                    {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login_user' %}">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'register_user' %}">Register</a>
-                    </li>
-                    {% endif %}
-                
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-</head>
-<body>
-    
+    {%include 'navbar.html' %}
 
     <form method="post" action="{% url 'add' %}" enctype="multipart/form-data">
         {% csrf_token %}
@@ -58,10 +27,7 @@
                 <label for="due_date" class="form-label">Due Date</label>
                 {{ form.dueDate }}
             </div>
-            <div class="mb-3">
-                <label for="priority" class="form-label">Priority</label>
-                {{ form.is_priority }}
-        </div>
+    
         <div class="container mt-5">
             <div class="mb-3 mx-0">
                 <label for="name" class="form-label">Task Category</label>
